chore: Java experiments 3